--- a/tasolutions.styles.css
+++ b/tasolutions.styles.css
@@ -50,14 +50,34 @@
     text-align: justify;
 }
 
-
-
-@media (max-width: 768px) {
-    .product-action-buttons[b-06f9cqi0ye] {
-        display: grid;
-        grid-gap: 0.5rem;
-    }
+.arrow[b-06f9cqi0ye] {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transition: all 500ms;
+    margin-inline: 5px;
 }
+
+.btn-arrow[b-06f9cqi0ye] {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    padding-inline: 0.75rem;
+    padding-block: 0.375rem;
+    line-height: 1.5;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
+    .btn-arrow:hover .arrow[b-06f9cqi0ye] {
+        transform: translateX(10px);
+    }
 /* /Components/MouseScrolIcon.razor.rz.scp.css */
 .scroll[b-2dkmpw72ld] {
     margin-top: 1rem;
@@ -147,13 +167,33 @@
     height: 32px;
 }
 
+.arrow[b-cbtd5qxuhz] {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+    display: inline-block;
+    padding: 3px;
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+    transition: all 500ms;
+    margin-inline: 5px;
+}
 
+.btn-arrow[b-cbtd5qxuhz] {
+    display: inline-block;
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    user-select: none;
+    padding-inline: 0.75rem;
+    padding-block: 0.375rem;
+    line-height: 1.5;
+    font-size: 1rem;
+    font-weight: 400;
+}
 
-@media (max-width: 768px) {
-    .product-action-buttons[b-cbtd5qxuhz] {
-        display: grid;
-        grid-gap: 0.5rem;
-    }
+.btn-arrow:hover .arrow[b-cbtd5qxuhz] {
+    transform: translateX(10px);
 }
 /* /Components/ProductFeatures.razor.rz.scp.css */
 .features-container[b-8ajpm79kwl] {
