--- a/css/app.css
+++ b/css/app.css
@@ -76,6 +76,9 @@ code {
 
 
 
+
+
+
 @keyframes loading{
     0%{
         transform: rotate(0deg) scale(1);
@@ -101,3 +104,10 @@ code {
         border-bottom:3px solid var(--bs-primary);
     }
 }
+
+@media (max-width: 576px) {
+    .lead {
+        font-size: 1rem;
+    }
+}
+
